--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,11 @@ jobs:
       - name: Install
         run: yarn install --immutable
 
+      - name: Debug env vars
+        run: |
+          echo $VITE_HOSTNAME
+          echo $HOSTNAME
+
       - name: Build
         run: yarn build
 
