Update deploy workflow.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,8 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       VITE_SERVER_HOSTNAME: '${{ secrets.VITE_SERVER_HOSTNAME }}'
-      VITE_DEMOS_CLOUDFRONT_URL: '${{ secrets.VITE_DEMOS_CLOUDFRONT_URL }}'
-      VITE_ASSETS_CLOUDFRONT_URL: '${{ secrets.VITE_ASSETS_CLOUDFRONT_URL }}'
+      VITE_DEMOS_CLOUDFRONT_URL: '${{ vars.VITE_DEMOS_CLOUDFRONT_URL }}'
+      VITE_ASSETS_CLOUDFRONT_URL: '${{ vars.VITE_ASSETS_CLOUDFRONT_URL }}'
       VITE_SUPABASE_URL: '${{ secrets.VITE_SUPABASE_URL }}'
       VITE_SUPABASE_ANON_KEY: '${{ secrets.VITE_SUPABASE_ANON_KEY }}'
     steps:
